Fix with z-index the photo-container

--- a/client/src/components/css/home-photo-container.css
+++ b/client/src/components/css/home-photo-container.css
@@ -11,4 +11,5 @@
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    z-index: 1;
 }
